added env file with api keys

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TMS_API_KEY='qp6xahv9m59kx2jambe8wvz7'
-THEMOVIEDB_API_KEY='83a86e6cebd651357db4273964ce2199'
+export TMS_API_KEY='qp6xahv9m59kx2jambe8wvz7'
+export THEMOVIEDB_API_KEY='4c53dedffd167cd81072650ce5741635'
